fix: hero section spacing

--- a/asset/main.css
+++ b/asset/main.css
@@ -4,7 +4,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'roboto', arial, Helvetica, sans-serif;
-    outline: 1px solid green !important;
+    /* outline: 1px solid green !important; */
 }
 
 
@@ -138,17 +138,16 @@ main {
 .hero {
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: center bottom;
-    margin-bottom: 5rem;
-    aspect-ratio: 21 / 9;
+    background-position: center top;
     display: flex;
     flex-direction: column;
-    min-height: 85vh;
-    overflow: hidden;
+    justify-content: center;
+    align-items: center;
+    border-radius: 30px;
+    width: 90%;
+    margin: 2rem auto 5rem auto; 
     position: relative;
-    width: 100%;
-    padding-top: 4rem;
-    
+    padding: 0 0 3rem 0;
 }
 
 /* Hero_sec decorative lines */
@@ -160,8 +159,8 @@ main {
     gap: 10px;
     width: 100%;
     padding: 0 1rem;
-    position: absolute;
-    top: 4rem;
+    margin: 3.5rem 0 0 0;
+
 }
 
 .hero .lines .wheel_pic {
@@ -212,10 +211,9 @@ main {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 100%;    
-    position: absolute;
-    top: 7rem;
-    padding: 0 0 0 10rem;
+    align-items: center;
+    width: auto;
+    margin: 2rem 0 0 0 ;
 }
 
 .hero .content h1 {
@@ -223,10 +221,8 @@ main {
     font-size: 3rem;    
     font-weight: 500;
     font-style: italic;
-    text-align: left;
+    text-align: center;
     margin: 0 0 1rem 0;
-    display: block; 
-    width: fit-content;
 }
 
 .hero .content h1 .span {
@@ -259,19 +255,17 @@ main {
     font-weight: 300;
     line-height: 1.5;
     margin: 0 0 2rem 0;
-    width: fit-content;
+    text-align: center;
 }
 
 /* Hero_sec list */
 .hero .content .list_container {
     display: flex;
-    gap: 2rem;
+    justify-content: space-evenly;
     list-style: none;
     gap: 4rem;
-    display: flex;
-    justify-content: flex-start;
     margin: 0 0 2rem 0;
-    width: fit-content;
+    width: 100%;
 }
 
 .hero .content .list_container li {
@@ -315,7 +309,7 @@ main {
 /* Image sliders */
 .image-sliders {
     width: fit-content;
-    margin: 3rem 2rem 3rem 25rem;
+    margin: 0 2rem 3rem 25rem;
 }
 
 .main-slider-container {
@@ -505,8 +499,3 @@ main {
     }
 }
 
-@media(max-width: 500px){
-    nav .sidebar{
-        width: 100%;
-    }
-}
