--- a/dashboard/tourist/index.css
+++ b/dashboard/tourist/index.css
@@ -1,3 +1,3 @@
 .hero {
-    background-image: url(../../asset/img/hero_main2.png);
+    background-image: url(../../asset/img/hero-sec-main.png);
 }
